--- a/index.html
+++ b/index.html
@@ -7,43 +7,108 @@
   <meta name="theme-color" content="#ffffff" />
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Inria+Serif&display=swap" rel="stylesheet">
+  <script src="myscript.js"></script>
   <title>Miodrag Aćimović, MD, PhD</title>
 </head>
 <body>
   <div class="page">
   <header>
-      <div class="contact">
-        <img src="phone.png" class="phone-img"/>
-        <p> +381 62 10 60 690 </p>
-      </div>
-      <div class="language-options">
-        <a> English </a>
-        <a href="index-sr.html"> Srpski </a>
-      </div>
+    <div class="nav-buttons">
+      <button class="nav-button-actual" onclick="window.location.href = 'index.html';"> HOME </button>
+      <button class="nav-button-actual" onclick="window.location.href = 'surgeries.html';"> SURGERIES </button>
+      <button class="nav-button-actual" onclick="window.location.href = 'interventions.html';"> INTERVENTIONS </button>
+      <button class="nav-button-actual" onclick="window.location.href = 'contact.html';"> CONTACT </button>
+    </div>
+    <div class="language-options">
+      <a href="index-sr.html"> SRPSKI </a>
+    </div>
   </header>
   <div class="top">
+
+    <a class="slideshow-buttons" id="button-back"> < </a>
+
+    <div class="slideshow-container">
+
+      <div class="slide">
+        <p class="slide-title"> Surgery Live </p>
+        <p class="slide-content"> First Live surgery in Belgrade organised by Miodrag Aćimović, MD, PhD </p>
+        <a class="read-more-link" id="news1" href="https://www.vesti.rs/Drustvo/PRVI-PUT-U-BEOGRADU-Operacije-uzivo-na-Uroloskoj-klinici.html"> Read more </a>
+        <img class="slide-img"/>
+      </div>
+
+      <div class="slide inactiveSlide">
+        <p class="slide-title"> Interview </p>
+        <p class="slide-content"> Interview on the subject of Erectile dysfunction </p>
+        <a class="read-more-link" id="news1" href="https://www.blic.rs/vesti/drustvo/muke-srba-u-seksu-svaki-drugi-ima-problem-sa-erekcijom/04t5ltf"> Read more </a>
+        <img class="slide-img"/>
+      </div>
+
+      <div class="slide inactiveSlide">
+        <p class="slide-title"> Urology Today </p>
+        <p class="slide-content"> Miodrag Aćimović, MD, PhD: Radical prostatectomy vs brachytherapy </p>
+        <a class="read-more-link" id="news1" href="http://www.urology-today.com/radikalna-prostatektomija-vs-brahiterapija/"> Read more </a>
+        <img class="slide-img"/>
+      </div>
+
+      <div class="slide">
+        <p class="slide-title"> Good Morning Show </p>
+        <div class="slide-flex">
+          <div class="slide-text">
+            <p class="slide-content"> Miodrag Aćimović, MD, PhD on the Good Morning Show </p>
+            <a class="read-more-link" id="news1" href="https://www.youtube.com/watch?v=hj2gDr7bZnk"> Read more </a>
+          </div>
+          <img class="slide-img" src="good morning.png"/>
+        </div>
+      </div>
+
+      <div class="slide">
+        <p class="slide-title"> Operative Urology </p>
+        <div class="slide-flex">
+          <div class="slide-text">
+            <p class="slide-content"> TV report on the opening of the School of Urological Surgery in Pirot, Serbia </p>
+            <a class="read-more-link" id="news1" href="https://www.youtube.com/watch?v=RKoUOY21iXA"> Read more </a>
+          </div>
+          <img class="slide-img" src="school of urology.png"/>
+        </div>
+      </div>
+
+    </div>
+
+    <a class="slideshow-buttons" id="button-fwd"> > </a>
+
+    <img src="prof-acimovic.png" class="prof-img"/>
+  </div>
+  <div class="logo">
     <div class="title">
       <h1> Miodrag Aćimović, MD, PhD </h1>
       <h2> Urologist </h2>
     </div>
-    <img src="prof-acimovic.png" class="prof-img"/>
-  </div>
-  <div class="logo">
     <img class="logo-img" src="logo.png"/>
   </div>
   <div class="side-menu">
     <div class="services">
-      <p> SERVICES </p>
+      <a href="surgeries.html"><p> Surgeries </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
-        <h3> | Open (classic) nephrectomy </h3>
+        <a href="surgeries.html#classic-nephrectomy"><h3> | Open (classic) nephrectomy </h3></a>
       </div>
       <div class="services-actual-container">
-        <h3> | Placement of percutaneous nephrostomy (drainage catheter) </h3>
+        <a href="surgeries.html#percutaneous-nephrostomy"><h3> | Placement of percutaneous nephrostomy (drainage catheter) </h3></a>
       </div>
       <div class="services-actual-container">
-        <h3> | Transurethral resection of prostate or bladder neck </h3>
+        <a href="surgeries.html#transurethral-resection"><h3> | Transurethral resection of prostate or bladder neck </h3></a>
+      </div>
+    </div>
+    <div class="services">
+      <a href="interventions.html"><p> Interventions </p></a>
+    </div>
+    <div class="services-actual">
+      <div class="services-actual-container">
+        <a href="interventions.html#condyloma-removal"><h3> | Condyloma removal </h3></a>
+      </div>
+      <div class="services-actual-container">
+        <a href="interventions.html#prostate-biopsy"><h3> | Prostate biopsy </h3></a>
       </div>
     </div>
   </div>
@@ -72,7 +137,7 @@
         <p> 1st Urology Department (Head of Department) Clinic of Urology, Clinical Center of Serbia,  Resavska 51, 11000 Belgrade, Serbia, 1994-present. </p></br>
       <h5> Academic positions </h5></br>
         <p> Associate Professor of Surgery, Medical School, University of Belgrade </p> </br>
-        <p>Member of the Program council in front of urology for doctoral studies in reconstructive surgery at the Faculty of Medicine, University of Belgrade
+        <p> Member of the Program council in front of urology for doctoral studies in reconstructive surgery at the Faculty of Medicine, University of Belgrade
         </p></br>
       <ol><h5 id="awardscv"> Awards </h5></br>
         <li> First prize for best poster presentation in the session:  Urethral Strictures and urethroplasty, 27th    EAU (European Association of Urology) Congress, Paris 2012: „Single stage repair of obliterated anterior urethral strictures by combined buccal mucosa graft and longitudinal dorsal penile skin flap“, Kojovic V, Acimovic M, Tulic C, Djordjevic M </li>
