--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
       <button class="nav-button-actual" onclick="window.location.href = 'surgeries.html';"> SURGERIES </button>
       <button class="nav-button-actual" onclick="window.location.href = 'interventions.html';"> INTERVENTIONS </button>
       <button class="nav-button-actual" onclick="window.location.href = 'contact.html';"> CONTACT </button>
-    </div>
-    <div class="language-options">
-      <a href="index-sr.html"> SRPSKI </a>
+      <button class="nav-button-actual" onclick="window.location.href = 'index-sr.html';"> SRPSKI </button>
     </div>
   </header>
   <div class="top">
@@ -87,7 +85,7 @@
   </div>
   <div class="side-menu">
     <div class="services">
-      <a href="surgeries.html"><p> Surgeries </p></a>
+      <a href="surgeries.html" id="area-link"><p> Surgeries </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
@@ -101,7 +99,7 @@
       </div>
     </div>
     <div class="services">
-      <a href="interventions.html"><p> Interventions </p></a>
+      <a href="interventions.html" id="area-link"><p> Interventions </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
