--- a/interventions.html
+++ b/interventions.html
@@ -12,17 +12,15 @@
 </head>
 <body>
   <div class="page">
-  <header>
-    <div class="nav-buttons">
-      <button class="nav-button-actual" onclick="window.location.href = 'index.html';"> HOME </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'surgeries.html';"> SURGERIES </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'interventions.html';"> INTERVENTIONS </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'contact.html';"> CONTACT </button>
-    </div>
-    <div class="language-options">
-      <a href="intervencije.html"> SRPSKI </a>
-    </div>
-  </header>
+    <header>
+      <div class="nav-buttons">
+        <button class="nav-button-actual" onclick="window.location.href = 'index.html';"> HOME </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'surgeries.html';"> SURGERIES </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'interventions.html';"> INTERVENTIONS </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'contact.html';"> CONTACT </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'intervencije.html';"> SRPSKI </button>
+      </div>
+    </header>
   <div class="top">
 
     <a class="slideshow-buttons" id="button-back"> < </a>
