--- a/operacije.html
+++ b/operacije.html
@@ -12,17 +12,15 @@
 </head>
 <body>
   <div class="page">
-  <header>
-    <div class="nav-buttons">
-      <button class="nav-button-actual" onclick="window.location.href = 'index-sr.html';"> POČETNA </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'operacije.html';"> OPERACIJE </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'intervencije.html';"> INTERVENCIJE </button>
-      <button class="nav-button-actual" onclick="window.location.href = 'kontakt.html';"> KONTAKT </button>
-    </div>
-    <div class="language-options">
-      <a href="surgeries.html"> ENGLISH </a>
-    </div>
-  </header>
+    <header>
+      <div class="nav-buttons">
+        <button class="nav-button-actual" onclick="window.location.href = 'index'sr.html';"> POČETNA </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'operacije.html';"> OPERACIJE </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'intervencije.html';"> INTERVENCIJE </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'kontakt.html';"> KONTAKT </button>
+        <button class="nav-button-actual" onclick="window.location.href = 'surgeries.html';"> ENGLISH </button>
+      </div>
+    </header>
   <div class="top">
 
     <a class="slideshow-buttons" id="button-back"> < </a>
