--- a/index-sr.html
+++ b/index-sr.html
@@ -85,7 +85,7 @@
   </div>
   <div class="side-menu">
     <div class="services">
-      <a href="operacije.html"><p> Operacije </p></a>
+      <a href="operacije.html" id="area-link"><p> Operacije </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="services">
-      <a href="intervencije.html"><p> Intervencije </p></a>
+      <a href="intervencije.html" id="area-link"><p> Intervencije </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
