--- a/interventions.html
+++ b/interventions.html
@@ -85,7 +85,7 @@
   </div>
   <div class="side-menu">
     <div class="services">
-      <a href="surgeries.html"><p> Surgeries </p></a>
+      <a href="surgeries.html" id="area-link"><p> Surgeries </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
@@ -99,7 +99,7 @@
       </div>
     </div>
     <div class="services">
-      <a href="interventions.html"><p> Interventions </p></a>
+      <a href="interventions.html" id="area-link"><p> Interventions </p></a>
     </div>
     <div class="services-actual">
       <div class="services-actual-container">
